# mycroft-skill-installer

./: CMakeLists.txt  MycroftSkillInstaller.pro  README.md  dev_setup.sh  org.mycroft.skillinstaller.desktop
app/: CMakeLists.txt  app.pro  filereader.cpp  filereader.h  globalconfiguration.cpp  globalconfiguration.h  installerlistmodel.cpp  installerlistmodel.h  main.cpp  net.bs.mycroft.installer.desktop  org.mycroft.skill.installer.desktop.cmake  processcommander.cpp  processcommander.h  qml.qrc  sysinfo.cpp  sysinfo.h
app/qml/: CanBackground.qml  FooterArea.qml  HeaderArea.qml  InformationModel.qml  InstallerArea.qml  InstallerBox.qml  InstallerView.qml  SortFilterModel.qml  main.qml  qtquickcontrols2.conf  resources.qrc
app/qml/+mediacenter/: main.qml
app/qml/+mediacenter/delegates/: ListDelegate.qml  TileDelegate.qml
app/qml/code/: Installer.js  SkillUtils.js
app/qml/delegates/: ListDelegate.qml  TileDelegate.qml
app/qml/views/: TileView.qml
preload/: configuration.json  entertainment.json  general.json  information.json  productivity.json
